--- a/templates/product-tooltip.html
+++ b/templates/product-tooltip.html
@@ -1,8 +1,9 @@
 <template>
-  <div class="product-tooltip-wrapper">
+  <div class="product-tooltip-wrapper loading">
+    <div class="loader">Loading...</div>
     <div class="gallery container">
-      <ul class="slideshow siema">
-      </ul>
+      <div class="slideshow siema">
+      </div>
       <button class="prev">Prev</button>
       <button class="next">Next</button>
     </div>
