--- a/jetty.css
+++ b/jetty.css
@@ -1,16 +1,24 @@
+.loader {
+  display: none;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
 .loading {
   .loader {
-    display: block;
+    display: flex;
   }
 
-  .container {
+  .container button{
     display: none;
   }
 }
 
 .slideshow {
-    width: 500px;
-    height: 425px;
+    width: 400px;
+    max-height: 400px;
 
     img {
         width: 100%;
@@ -30,7 +38,7 @@
 
 .tippy-content {
     padding: 20px;
-    max-width: 600px;
+    width: 440px;
     min-height: 200px;
     max-height: 40vh;
     overflow: scroll;
