--- a/templates/product-tooltip.html
+++ b/templates/product-tooltip.html
@@ -4,8 +4,8 @@
     <div class="gallery container">
       <div class="slideshow siema">
       </div>
-      <button class="prev">Prev</button>
-      <button class="next">Next</button>
+      <button class="prev button">Prev</button>
+      <button class="next button">Next</button>
     </div>
     <div class="spec container">
     </div>
