--- a/jetty.css
+++ b/jetty.css
@@ -1,14 +1,65 @@
-.loader {
-  display: none;
-  height: 100%;
-  width: 100%;
-  align-items: center;
-  justify-content: center;
+/* VARS */
+:root {
+  --beige: #F6F3EC;
+  --dark-beige: #AFAFA5;
+  --darker-beige: #7b7b71;
+  --yellow: #ECDA77;
+  --green: #D3DBB6;
+  
+  --background-color: var(--beige);
+
+  --modal-shadow: 0 0 30px rgba(0, 0, 0, 0.20);
+
+  --font-standard: 16px;
+
+  --border: 2px solid var(--dark-beige);
+  --border-light: 1px solid var(--dark-beige);
+
+  --height-modal: 400px;
+
+  --color-font-standard: var(--darker-beige);
 }
 
-.loading {
+.darkmode {
+  --background-color: white;
+}
+
+
+
+/* MODAL STYLES */
+.tippy-content {
+  background-color: var(--background-color);
+  padding: 2px;
+  width: 660px;
+  min-height: 440px;
+  max-height: 40vh;
+  border-radius: 2px;
+  border: var(--border);
+  border-bottom-width: 4px;
+  display: flex;
+  align-items: center;
+  color: var(--color-font-standard);
+}
+
+.product-tooltip-wrapper {
+  width: 100%;
+  overflow: scroll;
+  height: 432px;
+
+  .loader {
+    display: none;
+  }
+  
+}
+
+.product-tooltip-wrapper.loading {
   .loader {
     display: flex;
+    width: 100%;
+    justify-content: center;
+    height: 440px;
+    align-items: center;
+    font-size: 24px;
   }
 
   .container button{
@@ -16,30 +67,87 @@
   }
 }
 
-.slideshow {
-    width: 400px;
-    max-height: 400px;
+.button {
+  font: var(--font-standard);
+  border: var(--border-light);
+  border-bottom-width: 2px;
+  font-variant-caps: small-caps;
+  height: 30px;
+  padding: 0 10px;
+  border-radius: 2px;
+}
 
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
+.slideshow {
+  max-height: 400px;
+  margin: auto;
+
+  img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+  }
 }
 
 .loading {
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    display: flex;
-    height: 100%;
-    width: 100%;
+  .gallery {
+    display: none;
+  }
+  .spec {
+    display: none;
+  }
+  .review {
+    display: none;
+  }
 }
 
-.tippy-content {
-    padding: 20px;
-    width: 440px;
-    min-height: 200px;
-    max-height: 40vh;
-    overflow: scroll;
+.container {
+  margin-bottom: 20px;
+}
+
+/* GALLERY STYLES */
+.gallery {
+  margin: 20px auto;
+  position: relative;
+  width: 600px;
+
+  .prev, .next {
+    position: absolute;
+    width: 80px;
+    bottom: 0;
+
+    &:hover {
+      backdrop-filter: blur(3px);
+    }
+  }
+
+  .next {
+    right: 0;
+  }
+
+  .prev {
+    left: 0;
+  }
+}
+
+/* SPEC STYLES */
+
+/* REVIEW STYLES */
+.review > div {
+  margin: 1px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 22px;
+  gap: 5px;
+
+  &:hover {
+    background-color: var(--green);
+  }
+}
+.pure-g .bold, .pure-g .verified, .helpful-form {
+  display: none;
+}
+
+.margin-tb-10 {
+  margin: 0;
 }
