--- a/templates/product-tooltip.html
+++ b/templates/product-tooltip.html
@@ -7,7 +7,7 @@
       <button class="prev button">Prev</button>
       <button class="next button">Next</button>
     </div>
-    <div class="spec container">
+    <div class="description container">
     </div>
     <div class="review container">
     </div>
