--- a/jetty.css
+++ b/jetty.css
@@ -131,7 +131,10 @@
   }
 }
 
-/* SPEC STYLES */
+/* DESCRIPTION STYLES */
+.tippy-content  .description {
+  margin: 0 15px;
+}
 
 /* REVIEW STYLES */
 .review > div {
@@ -139,7 +142,7 @@
   margin-bottom: 15px;
   display: flex;
   flex-direction: column;
-  padding: 10px 22px;
+  padding: 10px 15px;
   gap: 5px;
 
   &:hover {
