--- a/jetty.css
+++ b/jetty.css
@@ -18,6 +18,8 @@
   --height-modal: 400px;
 
   --color-font-standard: var(--darker-beige);
+
+  --font-family: monospace;
 }
 
 .darkmode {
@@ -28,131 +30,181 @@
 
 /* MODAL STYLES */
 .tippy-content {
-  background-color: var(--background-color);
-  padding: 2px;
-  width: 660px;
-  min-height: 440px;
-  max-height: 40vh;
-  border: var(--border);
-  border-bottom-width: 4px;
-  display: flex;
   align-items: center;
+  background-color: var(--background-color);
+  border-bottom-width: 4px;
+  border: var(--border);
   color: var(--color-font-standard);
-}
+  display: flex;
+  height: 480px;
+  padding: 0px;
+  width: 640px;
+  font-family: var(--font-family);
 
-.product-tooltip-wrapper {
-  width: 100%;
-  overflow: scroll;
-  height: 432px;
-  scrollbar-width: none;
+  
 
-  .loader {
-    display: none;
+  /* rest of styling in here so style only applies to the modal */
+  h3 {
+    font-size: 16px;
+    font-family: var(--font-family);
+    margin: 10px 15px;
   }
   
-}
-
-.product-tooltip-wrapper.loading {
-  .loader {
-    display: flex;
+  .product-tooltip-wrapper {
     width: 100%;
-    justify-content: center;
-    height: 440px;
-    align-items: center;
-    font-size: 24px;
+    overflow: scroll;
+    height: 474px;
+    scrollbar-width: none;
+  
+    .loader {
+      display: none;
+    }
+    
   }
-
-  .container button{
-    display: none;
-  }
-}
-
-.button {
-  font: var(--font-standard);
-  border: var(--border-light);
-  border-bottom-width: 2px;
-  font-variant-caps: small-caps;
-  height: 30px;
-  padding: 0 10px;
-  border-radius: 1px;
-}
-
-.slideshow {
-  max-height: 400px;
-  margin: auto;
-
-  img {
+  
+  .product-tooltip-wrapper.loading {
+    .loader {
+      display: flex;
       width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
-}
-
-.loading {
-  .gallery {
-    .prev, .next {
+      justify-content: center;
+      height: 474px;
+      align-items: center;
+      font-size: 24px;
+    }
+  
+    .container button{
       display: none;
     }
   }
-  .spec {
-    display: none;
-  }
-  .review {
-    display: none;
-  }
-}
-
-.container {
-  margin-bottom: 20px;
-}
-
-/* GALLERY STYLES */
-.gallery {
-  margin: 20px auto;
-  position: relative;
-  width: 600px;
-
-  .prev, .next {
-    position: absolute;
-    width: 80px;
-    bottom: 0;
-
-    &:hover {
-      backdrop-filter: blur(3px);
+  
+  .button {
+    font: var(--font-standard);
+    border: var(--border-light);
+    font-variant-caps: small-caps;
+    height: 30px;
+    padding: 0 10px;
+    border-radius: 1px;
+  
+    &.thick {
+      border-bottom-width: 2px;
     }
   }
-
-  .next {
-    right: 0;
+  
+  .slideshow {
+    max-height: 400px;
+    margin: auto;
+  
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
   }
-
-  .prev {
-    left: 0;
+  
+  .loading {
+    .gallery {
+      .prev, .next {
+        display: none;
+      }
+    }
+    .spec {
+      display: none;
+    }
+    .review {
+      display: none;
+    }
   }
-}
-
-/* DESCRIPTION STYLES */
-.tippy-content  .description {
-  margin: 0 15px;
-}
-
-/* REVIEW STYLES */
-.review > div {
-  margin: 1px;
-  margin-bottom: 15px;
-  display: flex;
-  flex-direction: column;
-  padding: 10px 15px;
-  gap: 5px;
-
-  &:hover {
-    background-color: var(--green);
+  
+  .container {
+    margin-bottom: 20px;
   }
-}
-.pure-g .bold, .pure-g .verified, .helpful-form {
-  display: none;
-}
-
-.margin-tb-10 {
-  margin: 0;
+  
+  /* TOOL BAR */
+  .toolbar {
+    align-items: center;
+    background-color: var(--background-color);
+    border-bottom: var(--border-light);
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    padding: 5px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    
+    button {
+      font-size: 10px;
+      height: 24px;
+    }
+  
+    .nav {
+      display: flex;
+      gap: 10px;
+  
+      button {
+        border: 0;
+    
+        &.active {
+          border: var(--border-light);
+        }
+      }
+    }
+  }
+  
+  /* GALLERY STYLES */
+  .gallery {
+    margin: 20px auto;
+    position: relative;
+    width: 600px;
+  
+    .prev, .next {
+      position: absolute;
+      width: 80px;
+      bottom: 0;
+  
+      &:hover {
+        backdrop-filter: blur(3px);
+      }
+    }
+  
+    .next {
+      right: 0;
+    }
+  
+    .prev {
+      left: 0;
+    }
+  }
+  
+  /* DESCRIPTION STYLES */
+  .description {
+    margin: 0 15px;
+  }
+  
+  /* REVIEW STYLES */
+  .review {
+    h3 {
+      margin: 10px 30px;
+    }
+  
+    & > div {
+      margin: 1px;
+      margin-bottom: 15px;
+      display: flex;
+      flex-direction: column;
+      padding: 0 28px;
+      gap: 5px;
+  
+      &:hover {
+        background-color: var(--green);
+      }
+    }
+  }
+  .pure-g .bold, .pure-g .verified, .helpful-form {
+    display: none;
+  }
+  
+  .margin-tb-10 {
+    margin: 0;
+  }
 }
