--- a/templates/product-tooltip.html
+++ b/templates/product-tooltip.html
@@ -1,15 +1,25 @@
 <template>
   <div class="product-tooltip-wrapper loading">
+    <div class="toolbar">
+      <button class="close button">X</button>
+      <div class="nav">
+        <button class="button active">gallery</button>
+        <button class="button">description</button>
+        <button class="button">review</button>
+      </div>
+    </div>
     <div class="loader">Loading...</div>
     <div class="gallery container">
       <div class="slideshow siema">
       </div>
-      <button class="prev button">Prev</button>
-      <button class="next button">Next</button>
+      <button class="prev button thick">Prev</button>
+      <button class="next button thick">Next</button>
     </div>
     <div class="description container">
+      <h3 name="description">Description</h3>
     </div>
     <div class="review container">
+      <h3>Review</h3>
     </div>
   </div>
 </template>
