--- a/templates/product-tooltip.html
+++ b/templates/product-tooltip.html
@@ -12,8 +12,8 @@
     <div class="gallery container">
       <div class="slideshow siema">
       </div>
-      <button class="prev button thick">Prev</button>
-      <button class="next button thick">Next</button>
+      <button class="prev button thick">◄</button>
+      <button class="next button thick">►</button>
     </div>
     <div class="description container">
       <h3 name="description">Description</h3>
