--- a/templates/product-tooltip.html
+++ b/templates/product-tooltip.html
@@ -3,9 +3,9 @@
     <div class="toolbar">
       <button class="close button">X</button>
       <div class="nav">
-        <button class="button active">gallery</button>
-        <button class="button">description</button>
-        <button class="button">review</button>
+        <button class="button gallery d-none">gallery</button>
+        <button class="button description d-none">description</button>
+        <button class="button review d-none">review</button>
       </div>
     </div>
     <div class="loader">Loading...</div>
@@ -15,10 +15,10 @@
       <button class="prev button thick">◄</button>
       <button class="next button thick">►</button>
     </div>
-    <div class="description container">
+    <div class="description container d-none">
       <h3 name="description">Description</h3>
     </div>
-    <div class="review container">
+    <div class="review container d-none">
       <h3>Review</h3>
     </div>
   </div>
