--- a/assets/templates/product-tooltip.html
+++ b/assets/templates/product-tooltip.html
@@ -1,7 +1,9 @@
 <template>
   <div class="product-tooltip-wrapper loading">
     <div class="toolbar">
-      <button class="close button">X</button>
+      <div class="action">
+        <button class="close button">X</button>
+      </div>
       <div class="nav">
         <button class="button gallery d-none">gallery</button>
         <button class="button description d-none">description</button>
